frontend/test/should_fail/unary_002.grg
using attrib_model_001;

rule r {
	ni: NINT;

	modify {
		eval {
			ni.a = ++ ni.a;
		}
	}
}
